<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/high_margin"
        android:text="@string/pokemon_name"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_max"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/image_pokemon"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_pokemon"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/stats_pokemon_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginStart="@dimen/max_margin"
        android:text="@string/pokemon_stats"
        android:textColor="@color/textDark"
        android:textSize="@dimen/text_high"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_pokemon"/>

    <TextView
        android:id="@+id/weight_pokemon_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginStart="@dimen/max_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/pokemon_weight"
        android:textColor="@color/textDark"
        android:textSize="@dimen/text_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_pokemon_label"/>

    <TextView
        android:id="@+id/weight_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/pokemon_weight"
        app:layout_constraintStart_toEndOf="@id/weight_pokemon_label"
        app:layout_constraintTop_toBottomOf="@+id/stats_pokemon_label"/>

    <TextView
        android:id="@+id/height_pokemon_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginStart="@dimen/max_margin"
        android:text="@string/pokemon_height"
        android:textColor="@color/textDark"
        android:textSize="@dimen/text_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_pokemon"/>

    <TextView
        android:id="@+id/height_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:text="@string/pokemon_height"
        app:layout_constraintStart_toEndOf="@id/height_pokemon_label"
        app:layout_constraintTop_toBottomOf="@+id/weight_pokemon"/>

    <TextView
        android:id="@+id/base_experience_pokemon_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginStart="@dimen/max_margin"
        android:text="@string/pokemon_base_experience"
        android:textColor="@color/textDark"
        android:textSize="@dimen/text_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_pokemon"/>

    <TextView
        android:id="@+id/base_experience_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:text="@string/pokemon_base_experience"
        app:layout_constraintStart_toEndOf="@id/base_experience_pokemon_label"
        app:layout_constraintTop_toBottomOf="@+id/height_pokemon"/>

    <TextView
        android:id="@+id/date_captured_pokemon_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginStart="@dimen/max_margin"
        android:text="@string/date_captured_experience"
        android:textColor="@color/textDark"
        android:textSize="@dimen/text_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_experience_pokemon"/>

    <TextView
        android:id="@+id/date_captured_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:text="@string/date_captured_experience"
        app:layout_constraintStart_toEndOf="@id/date_captured_pokemon_label"
        app:layout_constraintTop_toBottomOf="@+id/base_experience_pokemon"/>

    <TextView
        android:id="@+id/pokemon_type_pokemon_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginStart="@dimen/max_margin"
        android:text="@string/pokemon_type"
        android:textColor="@color/textDark"
        android:textSize="@dimen/text_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_captured_pokemon"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_type_pokemons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/max_margin"
        android:scrollbars="horizontal"
        app:layout_constraintTop_toBottomOf="@id/pokemon_type_pokemon_label"/>

</android.support.constraint.ConstraintLayout>